--- a/client/layout/sidebar-v2/style.scss
+++ b/client/layout/sidebar-v2/style.scss
@@ -1,13 +1,19 @@
 .sidebar-v2 {
-	margin: 0;
-	padding: 16px;
-	box-sizing: border-box;
+	// TODO: Existing variables, overridden with values directly from designs;
+	// confirm these colors are correct and refactor as necessary
+	--color-sidebar-menu-hover-background: var(--studio-gray-0);
+	--color-sidebar-background: #fcfcfc;
 
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
 
 	height: 100vh;
+	background-color: var(--color-sidebar-background);
+
+	margin: 0;
+	padding: 16px;
+	box-sizing: border-box;
 }
 
 .sidebar-v2__main {
